chg: dev: add some dev docs, add rst doc checks to pre-commit config
* add doc8 and some pygrep hooks to validate .rst formatting
* add some pre-commit dev docs, usage and config hooks
* validate docs, reflow some text, fix some warnings
* make ChangeLog.rst an actual .rst doc

Signed-off-by: Stephen L Arnold <nerdboy@gentoo.org>

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -2,6 +2,7 @@
 #   pre-commit install
 # To update the pre-commit hooks run:
 #   pre-commit install-hooks
+
 exclude: '^(debian/.*|.tox/)$'
 repos:
   - repo: meta
@@ -27,23 +28,46 @@ repos:
       # - id: check-json
       - id: check-yaml
         exclude: 'conda/meta.yaml'
+
+  - repo: https://github.com/PyCQA/doc8
+    rev: 0.9.1
+    hooks:
+      - id: doc8
+        args:
+          - '--max-line-length=90'
+          - '--ignore=D001'
+        exclude: ChangeLog\.rst$
+
+  - repo: https://github.com/pre-commit/pygrep-hooks
+    rev: v1.9.0
+    hooks:
+      - id: rst-backticks
+        exclude: ChangeLog\.rst$
+      - id: rst-directive-colons
+      - id: rst-inline-touching-normal
+
 #  - repo: https://github.com/adrienverge/yamllint
 #    rev: v1.26.3
 #    hooks:
 #      - id: yamllint
+#        exclude: 'conda/meta.yaml'
+
   - repo: https://github.com/iconmaster5326/cmake-format-pre-commit-hook
     rev: v0.6.9
     hooks:
       - id: cmake-format
+
   - repo: https://github.com/lovesegfault/beautysh
     rev: v6.1.0
     hooks:
       - id: beautysh
+
 #  - repo: https://github.com/pocc/pre-commit-hooks
 #    rev: v1.1.1
 #    hooks:
 #      - id: clang-format
 #        args: [-i]
+
 # current cpplint hook ignores top-level CPPLINT.cfg
   - repo: https://github.com/cpplint/cpplint
     rev: 1.5.5
@@ -56,6 +80,7 @@ repos:
           - '--exclude=test/*.c'
           - '--exclude=test/*.cpp'
         files: \.(h|hh|hpp|hxx|h|c|cc|cpp|cxx|c)$
+
   - repo: https://github.com/jorisroovers/gitlint
     rev: v0.15.1
     hooks:
