--- a/.gitchangelog.rc
+++ b/.gitchangelog.rc
@@ -1,6 +1,6 @@
 # -*- coding: utf-8; mode: python -*-
 ##
-## Format
+## Message Format
 ##
 ##   ACTION: [AUDIENCE:] COMMIT_MSG [!TAG ...]
 ##
@@ -57,13 +57,13 @@
 ## Any commit having its full commit message matching any regexp listed here
 ## will be ignored and won't be reported in the changelog.
 ##
+#ignore_regexps = []
 ignore_regexps = [
     r'@minor', r'!minor',
     r'@cosmetic', r'!cosmetic',
     r'@refactor', r'!refactor',
     r'@wip', r'!wip',
     r'^([cC]hg|[fF]ix|[nN]ew)\s*:\s*[p|P]kg:',
-    r'^([cC]hg|[fF]ix|[nN]ew)\s*:\s*[d|D]ev:',
     r'^(.{3,3}\s*:)?\s*[fF]irst commit.?\s*$',
     r'^$',  ## ignore commits with empty messages
 ]
@@ -134,9 +134,10 @@ section_regexps = [
 #body_process = Wrap(regexp=r'\n(?=\w+\s*:)') | Indent(chars="  ")
 #body_process = Wrap(regexp=r'\n(?=\w+\s*:)')
 #body_process = noop
-#body_process = ReSub(r'((^|\n)[A-Z]\w+(-\w+)*: .*(\n\s+.*)*)+$', r'') | strip
+body_process = ReSub(r'((^|\n)[A-Z]\w+(-\w+)*: .*(\n\s+.*)*)+$', r'') | strip
 #body_process = lambda text: ""
-body_process = ReSub(r'.*', '')
+#body_process = ReSub(r'.*', '')
+
 
 ## ``subject_process`` is a callable
 ##
@@ -154,17 +155,17 @@ subject_process = (strip |
 ## Tags that will be used for the changelog must match this regexp.
 ##
 #tag_filter_regexp = r'^v?[0-9]+\.[0-9]+(\.[0-9]+)?$'
-tag_filter_regexp = r'^[0-9]+\.[0-9]+(\.[0-9]+)?$'
-
+tag_filter_regexp = r"^.*$"
 
 ## ``unreleased_version_label`` is a string or a callable that outputs a string
 ##
 ## This label will be used as the changelog Title of the last set of changes
 ## between last valid tag and HEAD if any.
-#unreleased_version_label = "(unreleased)"
+# custom template (.tpl file below) overrides this setting
 unreleased_version_label = lambda: swrap(
     ["git", "describe", "--tags"],
 shell=False)
+#unreleased_version_label = "(unreleased)"
 
 
 ## ``output_engine`` is a callable
@@ -195,9 +196,10 @@ shell=False)
 ##        Examples:
 ##           - makotemplate("restructuredtext")
 ##
-#output_engine = rest_py
+Woutput_engine = rest_py
 #output_engine = mustache("restructuredtext")
-output_engine = mustache("markdown")
+output_engine = mustache(".gitchangelog-keepachangelog.tpl")
+#output_engine = mustache("markdown")
 #output_engine = makotemplate("restructuredtext")
 
 
@@ -205,7 +207,7 @@ output_engine = mustache("markdown")
 ##
 ## This option tells git-log whether to include merge commits in the log.
 ## The default is to include them.
-include_merge = True
+include_merge = False
 
 
 ## ``log_encoding`` is a string identifier
@@ -252,7 +254,8 @@ include_merge = True
 #     r'/(?P<rev>[0-9]+\.[0-9]+(\.[0-9]+)?)\s+\([0-9]+-[0-9]{2}-[0-9]{2}\)\n--+\n/',
 #     idx=lambda m: m.start(1)
 # )
-#publish = stdout
+
+publish = stdout
 
 
 ## ``revs`` is a list of callable or a list of string
