chg: dev: let cmake use socket path ENV var or path as build option
* leave option empty/define unset if not found
* prefer path found in env over build option
* pass ENV var in tox.ini

Signed-off-by: Stephen L Arnold <nerdboy@gentoo.org>

--- a/tox.ini
+++ b/tox.ini
@@ -11,6 +11,7 @@ passenv =
     pythonLocation
     CI GITHUB*
     PIP_DOWNLOAD_CACHE
+    RIPC_RUNTIME_DIR
 
 whitelist_externals =
     {tests,clang,ctest,bionic,lint,grind,clean,auto,autoclean}: bash
@@ -48,7 +49,7 @@ commands =
     {tests,clang,bionic,grind}: bash -c "ctest -V --test-dir ./"
     lint: bash -c "cpplint --output=gsed {toxinidir}/src/* {toxinidir}/inc/*"
     {tests,bionic}: gcovr -s -b -r {toxinidir} .
-    ctest: bash -c 'ctest --build-generator {posargs:"Unix Makefiles"} --build-and-test . build --build-options -DWITH_COVERAGE=ON -DCMAKE_BUILD_TYPE=Debug --test-command ctest -V'
+    ctest: bash -c 'ctest --build-generator {posargs:"Unix Makefiles"} --build-and-test . build --build-options -DWITH_COVERAGE=ON -DCMAKE_BUILD_TYPE=Debug --test-command ctest --rerun-failed --output-on-failure -V'
     auto: gcovr -s -b src/.libs/ test/
     auto: gcovr --xml-pretty -o coverage.xml src/.libs/ test/
     ctest: gcovr -s -b build/
