--- a/.github/workflows/env.yml
+++ b/.github/workflows/env.yml
@@ -23,6 +23,10 @@ jobs:
     steps:
     - uses: actions/checkout@v2
 
+    - uses: actions/setup-python@v2
+      with:
+        python-version: '3.9'
+
     - name: Set platform server (socket) dir
       id: set_temp_dirs
       run: |
@@ -38,6 +42,11 @@ jobs:
         echo "Setting runtime dir: ${TEMP_DIR}"
         echo "TEMP_DIR=${TEMP_DIR}" >> $GITHUB_ENV
         bash -c set
+
+    - name: Add python requirements
+      run: |
+        python -m pip install --upgrade pip
+        pip install gcovr
 
     # we split the deps for ubunti json-c versions:
     #   bionic has json-c = 0.12 but focal
@@ -55,7 +64,6 @@ jobs:
         redis-server
         autoconf
         automake
-        gcovr
         lcov
 
     - name: Backports
@@ -99,7 +107,7 @@ jobs:
         RIPC_SERVER_PATH: "${{ env.TEMP_DIR }}/socket"
       run: |
         ctest -V --test-dir build/
-        gcovr -s -b build/
+        gcovr --config gcovr.cfg -r . -s -b build/
 
     - name: Cleanup
       env:
