--- a/.github/workflows/smoke.yml
+++ b/.github/workflows/smoke.yml
@@ -39,14 +39,6 @@ jobs:
     # we split the deps for ubunti json-c versions:
     #   bionic has json-c = 0.12 but focal
     #   has a broken 0.13 so we use 0.15 instead
-    - name: Backports
-      if: matrix.os == 'ubuntu-20.04'
-      run: |
-        sudo apt-get -qq update
-        sudo apt-get install -y software-properties-common
-        sudo add-apt-repository -y -s ppa:nerdboy/embedded
-        sudo apt-get install -y libjson-c-dev lcov autoconf automake
-
     - name: Upstream
       if: matrix.os == 'ubuntu-18.04'
       run: |
@@ -55,8 +47,15 @@ jobs:
 
     - name: Common dependencies
       run: |
-        sudo apt-get install -y libhiredis-dev
-        sudo apt-get install -y redis-server gcovr
+        sudo apt-get -qq update
+        sudo apt-get install -y libhiredis-dev redis-server
+
+    - name: Backports
+      if: matrix.os == 'ubuntu-20.04'
+      run: |
+        sudo apt-get install -y software-properties-common lcov autoconf automake
+        sudo add-apt-repository -y -s ppa:nerdboy/embedded
+        sudo apt-get install -y libjson-c-dev
 
     - name: Add python requirements
       run: |
