fix: local autotools env and small nit in PR coverage xml report names
* isolate internal env, override via ENV_RIPC_RUNTIME_DIR
* define package (internal) env var names using tox defaults
* move tox env commands to replicate workflow

Signed-off-by: Stephen L Arnold <nerdboy@gentoo.org>

--- a/tox.ini
+++ b/tox.ini
@@ -8,13 +8,12 @@ envdir = {toxinidir}/.env
 skip_install = true
 
 passenv =
-    RIPC_RUNTIME_DIR
     pythonLocation
     CI GITHUB*
     PIP_DOWNLOAD_CACHE
 
 setenv =
-    {auto,bionic}: RIPC_SERVER_PATH = {env:RIPC_SERVER_PATH:{envtmpdir}/socket}
+    {auto,bionic}: ENV_RIPC_RUNTIME_DIR = {env:ENV_RIPC_RUNTIME_DIR:{envtmpdir}}
 
 whitelist_externals =
     {tests,clang,ctest,bionic,lint,grind,clean,auto,autoclean}: bash
@@ -37,18 +36,19 @@ commands_pre =
     {tests,clang,bionic,grind}: mkdir -p {toxinidir}/build
     {tests,clang,ctest,grind}: bash -c '{toxinidir}/scripts/run_redis.sh start > /dev/null'
     {tests,clang,ctest,grind}: bash -c '{toxinidir}/scripts/run_redis.sh status'
-    {auto,bionic}: bash -c 'RIPC_RUNTIME_DIR={envtmpdir} {toxinidir}/scripts/run_redis.sh start > /dev/null'
-    {auto,bionic}: bash -c 'RIPC_RUNTIME_DIR={envtmpdir} {toxinidir}/scripts/run_redis.sh status'
 
 commands =
     # sadly this-cli cannot pass args to configure
     #auto: this check
     auto: bash -c 'autoreconf -fiv'
     auto: bash -c './configure {posargs:"--with-coverage"}'
-    auto: bash -c 'make cov'
+    auto: bash -c 'make cov || true'
     bionic: bash -c 'cmake -G {posargs:"Unix Makefiles"} -S . -B build -DWITH_COVERAGE=1 -DCMAKE_BUILD_TYPE=Debug'
     bionic: bash -c 'cmake --build build -j $(nproc)'
-    bionic: bash -c 'ctest -V --test-dir build/'
+    {auto,bionic}: bash -c 'RIPC_RUNTIME_DIR=$ENV_RIPC_RUNTIME_DIR {toxinidir}/scripts/run_redis.sh start > /dev/null'
+    {auto,bionic}: bash -c 'RIPC_RUNTIME_DIR=$ENV_RIPC_RUNTIME_DIR {toxinidir}/scripts/run_redis.sh status'
+    auto: bash -c 'RIPC_SERVER_PATH=$ENV_RIPC_RUNTIME_DIR/socket make cov'
+    bionic: bash -c 'RIPC_SERVER_PATH=$ENV_RIPC_RUNTIME_DIR/socket ctest -V --test-dir build/'
     clang: bash -c 'cmake -DCMAKE_TOOLCHAIN_FILE=../clang_toolchain.cmake ..'
     tests: bash -c 'cmake -DWITH_COVERAGE=1 -DCMAKE_BUILD_TYPE=Debug ..'
     grind: bash -c 'cmake -DCMAKE_BUILD_TYPE=Debug ..'
@@ -62,6 +62,7 @@ commands =
     {bionic,ctest}: gcovr -s -b build/
     bionic: gcovr --html --html-details -o {toxinidir}/coverage/coverage.html build/
     cover: gcovr --xml-pretty -o coverage.xml build/
+    {auto,bionic}: bash -c 'RIPC_RUNTIME_DIR=$ENV_RIPC_RUNTIME_DIR {toxinidir}/scripts/run_redis.sh stop'
     # runtime assertion error without || true =>  (SIGSEGV)) (exited with code -11)
     grind: bash -c 'valgrind --tool=memcheck --xml=yes --xml-file=json_check.xml --leak-check=full --show-leak-kinds=definite,possible --error-exitcode=127 ./json_test || true'
     # valgrind error exit without || true =>  (exited with code 127)
@@ -79,5 +80,4 @@ commands =
     autoclean: bash -c 'rm -rf Makefile Makefile.in aclocal.m4 ar-lib autom4te.cache/ compile config.* coverage* configure configure~ depcomp install-sh libltdl/ ltmain.sh m4/ missing src/Makefile.in test-driver test/gmon.out test/Makefile.in'
 
 commands_post =
-    {auto,bionic}: bash -c 'RIPC_RUNTIME_DIR={envtmpdir} {toxinidir}/scripts/run_redis.sh stop'
     {tests,clang,ctest,grind}: bash -c '{toxinidir}/scripts/run_redis.sh stop > /dev/null'
