new: dev: add cmake module to generate coverage data
* cmake module replicates makefile.am lcov/genhtml commands
* tox bionic env updated to generate full coverage
* move lcov to common deps in smoke workflow
* note full coverage reqiures 2 passes, one with and one without
  the runtime socket path override (true for both autotools
  and cmake builds)
* enabling cmake coverage also enables building test binaries;
  both are currently OFF by default

  - WITH_COVERAGE enables RIPC_BUILD_TESTING
  - enable RIPC_BUILD_TESTING to build test binaries only

Signed-off-by: Stephen L Arnold <nerdboy@gentoo.org>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,7 +17,7 @@ endif()
 
 set(RIPC_SONAME ${LIBRARY_VERSION})
 
-project(redis_ipc VERSION ${LIBRARY_VERSION} LANGUAGES C CXX)
+project(redis-ipc VERSION ${LIBRARY_VERSION} LANGUAGES C CXX)
 
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 set(CMAKE_VERBOSE_MAKEFILE ON)
@@ -47,7 +47,7 @@ endif()
 option(BUILD_SHARED_LIBS "build shared libraries" ON)
 option(BUILD_STATIC_LIBS "Build static libraries" OFF)
 
-option(RIPC_BUILD_TESTING "build and run tests" ON)
+option(RIPC_BUILD_TESTING "build and run tests" OFF)
 option(RIPC_DISABLE_SOCK_TESTS "disable tests requiring redis socket" OFF)
 
 set(RIPC_RUNTIME_DIR "" CACHE PATH "path to directory containing redis server socket")
@@ -68,9 +68,12 @@ elseif(RIPC_RUNTIME_DIR)
   add_compile_definitions(RIPC_RUNTIME_DIR="${RUNTIME_DIR}")
 endif()
 
+# Adds custom target for lcov report generation (does not build, only runs test cmd).
+# Note: "make cov" target must be run both with/without RIPC_RUNTIME_DIR override
+# in order to generate full coverage data.
 if(WITH_COVERAGE)
-    add_compile_options(--coverage)
-    add_link_options(--coverage)
+  set(RIPC_BUILD_TESTING ON)
+  include(TestCoverage)
 endif()
 
 #include(FindJSONC)
@@ -147,6 +150,7 @@ set_target_properties(redis_ipc
     )
 
 if(RIPC_BUILD_TESTING)
+  enable_testing()
   if (NOT RIPC_DISABLE_SOCK_TESTS)
     set(TEST_TARGETS
         command_result_test
