--- a/tox.ini
+++ b/tox.ini
@@ -20,7 +20,7 @@ whitelist_externals =
     {tests,clang,bionic,grind,cover}: mkdir
 
 changedir =
-    {tests,clang,grind}: build
+    {tests,bionic,clang,grind}: build
 
 deps =
     {auto,tests,clang,ctest,bionic,grind,lint,cover}: pip>=19.0.1
@@ -40,29 +40,28 @@ commands_pre =
 commands =
     # sadly this-cli cannot pass args to configure
     #auto: this check
+    bionic: bash -c 'cmake -G {posargs:"Unix Makefiles"} -DWITH_COVERAGE=1 -DCMAKE_BUILD_TYPE=Debug ..'
+    bionic: bash -c 'cmake --build .'
     auto: bash -c 'autoreconf -fiv'
     auto: bash -c './configure {posargs:"--with-coverage"}'
-    auto: bash -c 'make cov || true'
-    bionic: bash -c 'cmake -G {posargs:"Unix Makefiles"} -S . -B build -DWITH_COVERAGE=1 -DCMAKE_BUILD_TYPE=Debug'
-    bionic: bash -c 'cmake --build build -j $(nproc)'
+    {auto,bionic}: bash -c 'make cov || true'
     {auto,bionic}: bash -c 'RIPC_RUNTIME_DIR=$ENV_RIPC_RUNTIME_DIR {toxinidir}/scripts/run_redis.sh start > /dev/null'
     {auto,bionic}: bash -c 'RIPC_RUNTIME_DIR=$ENV_RIPC_RUNTIME_DIR {toxinidir}/scripts/run_redis.sh status'
-    auto: bash -c 'RIPC_SERVER_PATH=$ENV_RIPC_RUNTIME_DIR/socket make cov'
-    bionic: bash -c 'RIPC_SERVER_PATH=$ENV_RIPC_RUNTIME_DIR/socket ctest -V --test-dir build/'
-    clang: bash -c 'cmake -DCMAKE_TOOLCHAIN_FILE=../clang_toolchain.cmake ..'
+    {auto,bionic}: bash -c 'RIPC_SERVER_PATH=$ENV_RIPC_RUNTIME_DIR/socket make cov'
+    clang: bash -c 'cmake -DRIPC_BUILD_TESTING=ON -DCMAKE_TOOLCHAIN_FILE=../clang_toolchain.cmake ..'
     tests: bash -c 'cmake -DWITH_COVERAGE=1 -DCMAKE_BUILD_TYPE=Debug ..'
-    grind: bash -c 'cmake -DCMAKE_BUILD_TYPE=Debug ..'
+    grind: bash -c 'cmake -DRIPC_BUILD_TESTING=ON -DCMAKE_BUILD_TYPE=Debug ..'
     {tests,clang,grind}: bash -c 'cmake --build . -j $(nproc)'
     {tests,clang,grind}: bash -c 'ctest -V --test-dir ./'
     lint: bash -c 'cpplint --output=gsed {toxinidir}/src/* {toxinidir}/inc/*'
-    tests: gcovr -s -b -r {toxinidir} .
-    ctest: bash -c 'ctest --build-generator {posargs:"Unix Makefiles"} --build-and-test . build --build-options -DWITH_COVERAGE=ON -DCMAKE_BUILD_TYPE=Debug --test-command ctest --rerun-failed --output-on-failure -V'
     auto: gcovr -s -b src/.libs/ test/
     auto: gcovr --xml-pretty -o coverage.xml src/.libs/ test/
-    {bionic,ctest}: gcovr -s -b build/
-    bionic: gcovr --html --html-details -o {toxinidir}/coverage/coverage.html build/
-    cover: gcovr --xml-pretty -o coverage.xml build/
+    {bionic,tests}: gcovr -s -b -r {toxinidir} .
+    bionic: gcovr -r {toxinidir} --xml-pretty -o coverage.xml .
     {auto,bionic}: bash -c 'RIPC_RUNTIME_DIR=$ENV_RIPC_RUNTIME_DIR {toxinidir}/scripts/run_redis.sh stop'
+    ctest: bash -c 'ctest --build-generator {posargs:"Unix Makefiles"} --build-and-test . build --build-options -DWITH_COVERAGE=ON -DCMAKE_BUILD_TYPE=Debug --test-command ctest --rerun-failed --output-on-failure -V'
+    ctest: gcovr -s -b build/
+    cover: gcovr --xml-pretty -o coverage.xml build/
     # runtime assertion error without || true =>  (SIGSEGV)) (exited with code -11)
     grind: bash -c 'valgrind --tool=memcheck --xml=yes --xml-file=json_check.xml --leak-check=full --show-leak-kinds=definite,possible --error-exitcode=127 ./json_test || true'
     # valgrind error exit without || true =>  (exited with code 127)
