--- a/.github/workflows/smoke.yml
+++ b/.github/workflows/smoke.yml
@@ -48,12 +48,12 @@ jobs:
     - name: Common dependencies
       run: |
         sudo apt-get -qq update
-        sudo apt-get install -y libhiredis-dev redis-server
+        sudo apt-get install -y libhiredis-dev redis-server lcov
 
     - name: Backports
       if: matrix.os == 'ubuntu-20.04'
       run: |
-        sudo apt-get install -y software-properties-common lcov autoconf automake
+        sudo apt-get install -y software-properties-common autoconf automake
         sudo add-apt-repository -y -s ppa:nerdboy/embedded
         sudo apt-get install -y libjson-c-dev
 
