--- a/.github/workflows/env.yml
+++ b/.github/workflows/env.yml
@@ -51,26 +51,23 @@ jobs:
     # we split the deps for ubunti json-c versions:
     #   bionic has json-c = 0.12 but focal
     #   has a broken 0.13 so we use 0.15 instead
-    - name: Upstream
+    #   otoh, bionic has old lcov without --include support
+    - name: Common dependencies
+      run: |
+        sudo apt-get -qq update
+        sudo apt-get install -y libhiredis-dev redis-server
+
+    - name: Backports (bionic)
       if: matrix.os == 'ubuntu-18.04'
       run: |
-        sudo apt-get -qq update
-        sudo apt-get install -y cmake libjson-c-dev
+        sudo apt-get install -y software-properties-common libjson-c-dev
+        sudo add-apt-repository -y -s ppa:nerdboy/embedded
+        sudo apt-get install -y lcov
 
-    - name: Common dependencies
-      run: >
-        sudo apt-get install -y
-        libhiredis-dev
-        redis-server
-        autoconf
-        automake
-        lcov
-
-    - name: Backports
+    - name: Backports (focal)
       if: matrix.os == 'ubuntu-20.04'
       run: |
-        sudo apt-get -qq update
-        sudo apt-get install -y software-properties-common
+        sudo apt-get install -y software-properties-common autoconf automake lcov
         sudo add-apt-repository -y -s ppa:nerdboy/embedded
         sudo apt-get install -y libjson-c-dev
 
@@ -86,6 +83,7 @@ jobs:
       run: |
         cmake -S . -B build -DWITH_COVERAGE=1 -DCMAKE_BUILD_TYPE=Debug
         cmake --build build -j 2
+        make cov || true
 
     - name: Message bus
       env:
@@ -106,7 +104,7 @@ jobs:
       env:
         RIPC_SERVER_PATH: "${{ env.TEMP_DIR }}/socket"
       run: |
-        ctest -V --test-dir build/
+        ctest --build-target cov --test-dir build/
         gcovr --config gcovr.cfg -r . -s -b build/
 
     - name: Cleanup
