restore gcovr funtion report to coverage artifact
Signed-off-by: Stephen L Arnold <nerdboy@gentoo.org>

--- a/.github/workflows/smoke.yml
+++ b/.github/workflows/smoke.yml
@@ -69,6 +69,7 @@ jobs:
         tox -e "${{ matrix.test_cmd }}"
 
     - uses: actions/upload-artifact@v2
+      if: matrix.os == 'ubuntu-18.04'
       with:
         name: coverage
         path: ./coverage
