--- a/.github/workflows/conda.yml
+++ b/.github/workflows/conda.yml
@@ -3,10 +3,10 @@ name: Conda
 on:
   workflow_dispatch:
   #pull_request:
-  push:
-    branches:
-      - master
-      - develop
+  #push:
+    #branches:
+      #- master
+      #- develop
     paths-ignore:
       - '**.md'
       - '**.rst'
