--- a/redis-ipc.pc.in
+++ b/redis-ipc.pc.in
@@ -5,6 +5,6 @@ includedir=${prefix}/include
 
 Name: redis-ipc
 Description: redis-ipc is an advanced IPC client using redis
-Version: @LIBRARY_VERSION@
+Version: @PACKAGE_VERSION@
 Cflags: -std=c++11 -pthread -I${includedir}
 Libs: -pthread -L${libdir} -lredis_ipc
