update version in configure.ac, fix typo and check macos
Signed-off-by: Stephen L Arnold <nerdboy@gentoo.org>

--- a/.gitchangelog.rc
+++ b/.gitchangelog.rc
@@ -196,7 +196,7 @@ shell=False)
 ##        Examples:
 ##           - makotemplate("restructuredtext")
 ##
-Woutput_engine = rest_py
+#output_engine = rest_py
 #output_engine = mustache("restructuredtext")
 output_engine = mustache(".gitchangelog-keepachangelog.tpl")
 #output_engine = mustache("markdown")
