--- a/.github/workflows/conda-dev.yml
+++ b/.github/workflows/conda-dev.yml
@@ -15,7 +15,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: ['ubuntu-18.04', 'ubuntu-20.04', 'macos-latest']
+        os: ['ubuntu-18.04', 'ubuntu-20.04']
         python-version: ['3.7', '3.9']
         include:
           - os: 'ubuntu-18.04'
