--- a/.github/workflows/conda-dev.yml
+++ b/.github/workflows/conda-dev.yml
@@ -24,9 +24,9 @@ jobs:
           - os: 'ubuntu-20.04'
             generator: 'Ninja'
             build_type: 'RelWithDebInfo'
-          - os: 'macOS-11'
-            generator: 'Ninja'
-            build_type: 'Debug'
+          #- os: 'macOS-11'
+          #  generator: 'Ninja'
+          #  build_type: 'Debug'
     env:
       OS: ${{ matrix.os }}
       PYTHON: ${{ matrix.python-version }}
