--- a/tox.ini
+++ b/tox.ini
@@ -49,11 +49,12 @@ commands =
     {auto,bionic}: bash -c 'RIPC_RUNTIME_DIR=$ENV_RIPC_RUNTIME_DIR {toxinidir}/scripts/run_redis.sh start > /dev/null'
     {auto,bionic}: bash -c 'RIPC_RUNTIME_DIR=$ENV_RIPC_RUNTIME_DIR {toxinidir}/scripts/run_redis.sh status'
     {auto,bionic}: bash -c 'RIPC_SERVER_PATH=$ENV_RIPC_RUNTIME_DIR/socket make cov'
-    clang: bash -c 'cmake -DRIPC_BUILD_TESTING=ON -DCMAKE_TOOLCHAIN_FILE=../clang_toolchain.cmake ..'
+    clang: bash -c 'cmake -DRIPC_BUILD_TESTING=ON -DCOVERAGE_BUILD=ON -DCMAKE_TOOLCHAIN_FILE=../clang_toolchain.cmake ..'
     tests: bash -c 'cmake -DWITH_COVERAGE=1 -DCMAKE_BUILD_TYPE=Debug ..'
     grind: bash -c 'cmake -DRIPC_BUILD_TESTING=ON -DCMAKE_BUILD_TYPE=Debug ..'
     {tests,clang,grind}: bash -c 'cmake --build . -j $(nproc)'
-    {tests,clang,grind}: bash -c 'ctest -V --test-dir ./'
+    {tests,grind}: bash -c 'ctest -V --test-dir ./'
+    clang: bash -c 'cmake --build . --target coverage'
     lint: bash -c 'cpplint --output=gsed {toxinidir}/src/* {toxinidir}/inc/*'
     auto: gcovr -s -b src/.libs/ test/
     auto: gcovr --xml-pretty -o coverage.xml src/.libs/ test/
