--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -222,11 +222,11 @@ jobs:
         output: 'both'
 
     - name: Add Coverage PR Comment
-      uses: marocchino/sticky-pull-request-comment@v2.1.1
-      if: ${{ github.event_name == 'pull_request' }}
+      uses: marocchino/sticky-pull-request-comment@v2
       with:
         header: coverage
-        recreate: true
+        hide_and_recreate: true
+        hide_classify: "OUTDATED"
         path: code-coverage-results.md
 
   test:
@@ -315,7 +315,8 @@ jobs:
       if: env.HAVE_BASE_COVERAGE == 'true'
       with:
         header: delta
-        recreate: true
+        hide_and_recreate: true
+        hide_classify: "OUTDATED"
         path: coverage-delta.md
 
   badge:
