--- a/.github/workflows/choke.yml
+++ b/.github/workflows/choke.yml
@@ -33,27 +33,17 @@ jobs:
       run: |
         bash -c set
 
-    # we split the deps for ubunti json-c versions:
-    #   bionic has json-c = 0.12 but focal
-    #   has a broken 0.13 so we use 0.15 instead
     - name: Backports
-      if: matrix.os == 'ubuntu-20.04'
       run: |
         sudo apt-get -qq update
         sudo apt-get install -y software-properties-common
         sudo add-apt-repository -y -s ppa:nerdboy/embedded
-        sudo apt-get install -y libjson-c-dev
-
-    - name: Upstream
-      if: matrix.os == 'ubuntu-18.04'
-      run: |
-        sudo apt-get -qq update
-        sudo apt-get install -y libjson-c-dev
-
-    - name: Common dependencies
-      run: |
-        sudo apt-get install -y libhiredis-dev gcovr lcov redis-server
+        sudo apt-get install -y libjson-c-dev lcov
+        sudo apt-get install -y libhiredis-dev gcovr redis-server
         sudo apt-get install -y valgrind libc6-dbg
+
+    - name: Stop redis-server system service
+      run: |
         sudo systemctl stop redis
 
     - name: Add python requirements
