--- a/.github/workflows/env.yml
+++ b/.github/workflows/env.yml
@@ -48,10 +48,6 @@ jobs:
         python -m pip install --upgrade pip
         pip install gcovr
 
-    # we split the deps for ubunti json-c versions:
-    #   bionic has json-c = 0.12 but focal
-    #   has a broken 0.13 so we use 0.15 instead
-    #   otoh, bionic has old lcov without --include support
     - name: Common dependencies
       run: |
         sudo apt-get -qq update
@@ -60,9 +56,9 @@ jobs:
     - name: Backports (bionic)
       if: matrix.os == 'ubuntu-18.04'
       run: |
-        sudo apt-get install -y software-properties-common libjson-c-dev
+        sudo apt-get install -y software-properties-common
         sudo add-apt-repository -y -s ppa:nerdboy/embedded
-        sudo apt-get install -y lcov
+        sudo apt-get install -y libjson-c-dev lcov
 
     - name: Backports (focal)
       if: matrix.os == 'ubuntu-20.04'
