--- a/tox.ini
+++ b/tox.ini
@@ -27,6 +27,7 @@ deps =
     {tests,clang,ctest,bionic,grind}: cmake
     {tests,clang,ctest,bionic,grind}: ninja
     {auto,tests,clang,ctest,bionic,cover}: gcovr
+    lcov: lcov_cobertura @ https://github.com/sarnold/lcov-to-cobertura-xml/releases/download/1.6.1/lcov_cobertura-1.6.1-py3-none-any.whl
     auto: this-cli
     lint: cpplint
     lint: beautysh
@@ -55,6 +56,7 @@ commands =
     {tests,clang,grind}: bash -c 'cmake --build . -j $(nproc)'
     {tests,grind}: bash -c 'ctest -V --test-dir ./'
     clang: bash -c 'cmake --build . --target coverage'
+    lcov: lcov_cobertura build/coverage/lcov.info --base-dir {toxinidir} --output coverage.xml
     lint: bash -c 'cpplint --output=gsed {toxinidir}/src/* {toxinidir}/inc/*'
     auto: gcovr -s -b src/.libs/ test/
     auto: gcovr --xml-pretty -o coverage.xml src/.libs/ test/
