chg: update smoke/coverage deps, use new llvm source coverage in workflow
Signed-off-by: Stephen L Arnold <nerdboy@gentoo.org>

--- a/tox.ini
+++ b/tox.ini
@@ -26,7 +26,7 @@ deps =
     {auto,tests,clang,ctest,bionic,grind,lint,cover}: pip>=19.0.1
     {tests,clang,ctest,bionic,grind}: cmake
     {tests,clang,ctest,bionic,grind}: ninja
-    {auto,tests,clang,ctest,bionic,cover}: gcovr
+    {auto,tests,ctest,bionic,cover}: gcovr
     lcov: lcov_cobertura @ https://github.com/sarnold/lcov-to-cobertura-xml/releases/download/1.6.1/lcov_cobertura-1.6.1-py3-none-any.whl
     auto: this-cli
     lint: cpplint
@@ -50,7 +50,7 @@ commands =
     {auto,bionic}: bash -c 'RIPC_RUNTIME_DIR=$ENV_RIPC_RUNTIME_DIR {toxinidir}/scripts/run_redis.sh start > /dev/null'
     {auto,bionic}: bash -c 'RIPC_RUNTIME_DIR=$ENV_RIPC_RUNTIME_DIR {toxinidir}/scripts/run_redis.sh status'
     {auto,bionic}: bash -c 'RIPC_SERVER_PATH=$ENV_RIPC_RUNTIME_DIR/socket make cov'
-    clang: bash -c 'cmake -DRIPC_BUILD_TESTING=ON -DCOVERAGE_BUILD=ON -DCMAKE_TOOLCHAIN_FILE=../clang_toolchain.cmake ..'
+    clang: bash -c 'cmake -DRIPC_BUILD_TESTING=ON -DCOVERAGE_BUILD=ON -DCOVERAGE_HTML=ON -DCMAKE_TOOLCHAIN_FILE=../clang_toolchain.cmake ..'
     tests: bash -c 'cmake -DWITH_COVERAGE=1 -DCMAKE_BUILD_TYPE=Debug ..'
     grind: bash -c 'cmake -DRIPC_BUILD_TESTING=ON -DCMAKE_BUILD_TYPE=Debug ..'
     {tests,clang,grind}: bash -c 'cmake --build . -j $(nproc)'
