--- a/.github/workflows/smoke.yml
+++ b/.github/workflows/smoke.yml
@@ -36,24 +36,16 @@ jobs:
       run: |
         bash -c set
 
-    - name: Common dependencies
+    # use gtest/gmock 1.10 from PPA in the following step
+    - name: Deps plus PPA/msg bus
       run: |
         sudo apt-get -qq update
-        sudo apt-get install -y libhiredis-dev redis-server
-
-    - name: Backports (bionic)
-      if: matrix.os == 'ubuntu-18.04'
-      run: |
-        sudo apt-get install -y software-properties-common
+        sudo apt-get install -yqq software-properties-common libhiredis-dev
+        sudo apt-get install -yqq redis-server autoconf automake
         sudo add-apt-repository -y -s ppa:nerdboy/embedded
-        sudo apt-get install -y libjson-c-dev lcov
-
-    - name: Backports (focal)
-      if: matrix.os == 'ubuntu-20.04'
-      run: |
-        sudo apt-get install -y software-properties-common autoconf automake lcov
-        sudo add-apt-repository -y -s ppa:nerdboy/embedded
-        sudo apt-get install -y libjson-c-dev
+        sudo apt-get -qq update
+        sudo apt-get install -yqq libjson-c-dev libgtest-dev libgmock-dev lcov
+        sudo systemctl stop redis
 
     - name: Add python requirements
       run: |
