--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -142,10 +142,9 @@ jobs:
         sudo add-apt-repository -y -s ppa:nerdboy/embedded
         sudo apt-get install -y libjson-c-dev
         sudo apt-get install -y libhiredis-dev lcov
-        sudo apt-get install -yqq redis-server clang-9 lld-9 llvm-9
-        echo "/usr/lib/llvm/9/bin" >> $GITHUB_PATH
-        echo "CC=clang-9" >> $GITHUB_ENV
-        echo "CXX=clang++-9" >> $GITHUB_ENV
+        sudo apt-get install -yqq redis-server clang-11 lld-11 llvm-11-tools
+        echo "CC=clang-11" >> $GITHUB_ENV
+        echo "CXX=clang++-11" >> $GITHUB_ENV
         sudo systemctl stop redis
 
     - name: Add python requirements
