--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -142,9 +142,9 @@ jobs:
         sudo add-apt-repository -y -s ppa:nerdboy/embedded
         sudo apt-get install -y libjson-c-dev
         sudo apt-get install -y libhiredis-dev lcov
-        sudo apt-get install -yqq redis-server clang-11 lld-11 llvm-11-tools
-        echo "CC=clang-11" >> $GITHUB_ENV
-        echo "CXX=clang++-11" >> $GITHUB_ENV
+        sudo apt-get install -yqq redis-server clang-10 lld-10 llvm-10-tools
+        echo "CC=clang-10" >> $GITHUB_ENV
+        echo "CXX=clang++-10" >> $GITHUB_ENV
         sudo systemctl stop redis
 
     - name: Add python requirements
@@ -159,16 +159,18 @@ jobs:
       run: |
         tox -e clang,lcov
 
-    - uses: actions/upload-artifact@v2
-      with:
-        name: src_coverage_data
-        path: build/coverage
-
     - name: Code Coverage Summary Report (data)
       uses: irongut/CodeCoverageSummary@v1.1.0
       with:
         filename: coverage.xml
         output: 'both'
+
+    - uses: actions/upload-artifact@v2
+      with:
+        name: src_coverage_rpts
+        path: |
+          coverage.xml
+          code-coverage-results.txt
 
     - name: Check code coverage
       id: coverage
