--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -142,9 +142,10 @@ jobs:
         sudo add-apt-repository -y -s ppa:nerdboy/embedded
         sudo apt-get install -y libjson-c-dev
         sudo apt-get install -y libhiredis-dev lcov
-        sudo apt-get install -yqq redis-server clang-10 lld-10 llvm-10-tools
-        echo "CC=clang-10" >> $GITHUB_ENV
-        echo "CXX=clang++-10" >> $GITHUB_ENV
+        sudo apt-get install -yqq redis-server clang-12 lld-12 llvm-12-tools
+        echo "CC=clang-12" >> $GITHUB_ENV
+        echo "CXX=clang++-12" >> $GITHUB_ENV
+        echo "ENV_LLVM_VER=12" >> $GITHUB_ENV
         sudo systemctl stop redis
 
     - name: Add python requirements
@@ -156,6 +157,7 @@ jobs:
       env:
         CC: ${{ env.CC }}
         CXX: ${{ env.CXX }}
+        ENV_LLVM_VER: ${{ env.ENV_LLVM_VER }}
       run: |
         tox -e clang,lcov
 
@@ -177,7 +179,7 @@ jobs:
       env:
         VALUE: "Branch Rate"
       run: |
-        COVERAGE="$( cat code-coverage-results.txt | egrep "^${VALUE}" | sed -e 's#^.* \([0-9]*\)%.*#\1#' )"
+        COVERAGE="$( cat code-coverage-results.txt | egrep "^${VALUE}" | sed -e 's#^.* \([0-9]*\)%.*#\1#' | tail -n1 )"
         echo "##[set-output name=coverage;]${COVERAGE}"
         echo "##[set-output name=coverage-rounded-display;]${COVERAGE}%"
 
