--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -1,4 +1,5 @@
-# internal coverage PR comment and badge v0.0.2
+# internal coverage with PR comment and badge v0.0.3
+# updated actions and coverage value regex, no fork isolation yet
 # badge and comment job logic should be tuned for personal vs org use
 # (see badge job comments below)
 name: Coverage
@@ -179,7 +180,7 @@ jobs:
       env:
         VALUE: "Branch Rate"
       run: |
-        COVERAGE="$( cat code-coverage-results.txt | egrep "^${VALUE}" | sed -e 's#^.* \([0-9]*\)%.*#\1#' | tail -n1 )"
+        COVERAGE=$( cat code-coverage-results.txt | grep -e ^Summary | grep -o -E "${VALUE} = .{2}" | awk '{ print $4 }' )
         echo "##[set-output name=coverage;]${COVERAGE}"
         echo "##[set-output name=coverage-rounded-display;]${COVERAGE}%"
 
@@ -281,7 +282,7 @@ jobs:
         fi
 
     - name: Comment PR with test coverage delta
-      uses: marocchino/sticky-pull-request-comment@v2.1.1
+      uses: marocchino/sticky-pull-request-comment@v2
       if: env.HAVE_BASE_COVERAGE == 'true'
       with:
         header: delta
