--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -194,6 +194,7 @@ jobs:
 
     - name: Add Coverage PR Comment
       uses: marocchino/sticky-pull-request-comment@v2
+      if: ${{ github.event_name == 'pull_request' }}
       with:
         header: coverage
         hide_and_recreate: true
