new: dev: add dist target to tox cmds, update templates
* templates: fix UK spellng, update verbiage
* add dist target for release workflow

Signed-off-by: Stephen L Arnold <nerdboy@gentoo.org>

--- a/tox.ini
+++ b/tox.ini
@@ -20,19 +20,19 @@ setenv =
     {auto,bionic}: ENV_RIPC_RUNTIME_DIR = {env:ENV_RIPC_RUNTIME_DIR:{envtmpdir}}
 
 whitelist_externals =
-    {tests,clang,ctest,bionic,lint,grind,clean,auto,autoclean}: bash
+    {tests,clang,ctest,bionic,lint,grind,clean,auto,autoclean,dist}: bash
     {tests,clang,bionic,grind,cover}: mkdir
 
 changedir =
     {tests,bionic,clang,grind}: build
 
 deps =
-    {auto,tests,clang,ctest,bionic,grind,lint,cover}: pip>=19.0.1
+    {auto,dist,tests,clang,ctest,bionic,grind,lint,cover}: pip>=19.0.1
     {tests,clang,ctest,bionic,grind}: cmake
     {tests,clang,ctest,bionic,grind}: ninja
     {auto,tests,ctest,bionic,cover}: gcovr
     lcov: lcov_cobertura @ https://github.com/sarnold/lcov-to-cobertura-xml/releases/download/1.6.1/lcov_cobertura-1.6.1-py3-none-any.whl
-    auto: this-cli
+    {auto,dist}: this-cli
     lint: cpplint
     lint: beautysh
     grind: ValgrindCI
@@ -40,12 +40,14 @@ deps =
 commands_pre =
     bionic: mkdir -p {toxinidir}/coverage
     {tests,clang,bionic,grind}: mkdir -p {toxinidir}/build
-    {tests,clang,ctest,grind}: bash -c '{toxinidir}/scripts/run_redis.sh start > /dev/null'
-    {tests,clang,ctest,grind}: bash -c '{toxinidir}/scripts/run_redis.sh status'
+    {tests,clang,ctest,grind,dist}: bash -c '{toxinidir}/scripts/run_redis.sh start > /dev/null'
+    {tests,clang,ctest,grind,dist}: bash -c '{toxinidir}/scripts/run_redis.sh status'
 
 commands =
     # sadly this-cli cannot pass args to configure
-    #auto: this check
+    dist: this check
+    dist: bash -c 'make clean'
+    dist: bash -c 'make dist'
     bionic: bash -c 'cmake -G {posargs:"Unix Makefiles"} -DWITH_COVERAGE=1 -DCMAKE_BUILD_TYPE=Debug ..'
     bionic: bash -c 'cmake --build .'
     auto: bash -c 'autoreconf -fiv'
@@ -88,4 +90,4 @@ commands =
     autoclean: bash -c 'rm -rf Makefile Makefile.in aclocal.m4 ar-lib autom4te.cache/ compile config.* coverage* configure configure~ depcomp install-sh libltdl/ ltmain.sh m4/ missing src/Makefile.in test-driver test/gmon.out test/Makefile.in'
 
 commands_post =
-    {tests,clang,ctest,grind}: bash -c '{toxinidir}/scripts/run_redis.sh stop > /dev/null'
+    {tests,clang,ctest,grind,dist}: bash -c '{toxinidir}/scripts/run_redis.sh stop > /dev/null'
