--- a/.github/workflows/mark-stale.yml
+++ b/.github/workflows/mark-stale.yml
@@ -1,6 +1,7 @@
 name: Mark Stale Issues and PRs
 
 on:
+  workflow_dispatch:
   schedule:
   - cron: "30 1 * * *"
 
@@ -11,7 +12,7 @@ jobs:
 
     steps:
     - name: Mark Stale
-      uses: actions/stale@v3
+      uses: actions/stale@v4
       with:
         repo-token: ${{ secrets.GITHUB_TOKEN }}
         exempt-all-milestones: true
@@ -25,5 +26,5 @@ jobs:
         days-before-pr-close: 14
         stale-issue-label: 'stale'
         stale-pr-label: 'stale'
-        closed-issue-label: 'closed-stale'
-        closed-pr-label: 'closed-stale'
+        close-issue-label: 'closed-stale'
+        close-pr-label: 'closed-stale'
