chg: update dependabot config
* use custom prefix in commit msg
* add label (if found)
* no need to set target-branch for default

Signed-off-by: Stephen L Arnold <nerdboy@gentoo.org>

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -5,6 +5,11 @@ updates:
     directory: "/"
     schedule:
       interval: "daily"
+    commit-message:
+      prefix: "ci:"
+    labels: ["actions"]
+    # only needed for non-default branch
+    #target-branch: "develop"
     ignore:
       # Offical actions have moving tags like v1
       # that are used, so they don't need updates here
