update upstream coverage dep, fix typos in readme !minor
Signed-off-by: Stephen L Arnold <nerdboy@gentoo.org>

--- a/tox.ini
+++ b/tox.ini
@@ -31,7 +31,7 @@ deps =
     {tests,clang,ctest,bionic,grind}: cmake
     {tests,clang,ctest,bionic,grind}: ninja
     {auto,tests,ctest,bionic,cover}: gcovr
-    lcov: lcov_cobertura @ https://github.com/sarnold/lcov-to-cobertura-xml/releases/download/1.6.1/lcov_cobertura-1.6.1-py3-none-any.whl
+    lcov: lcov_cobertura
     {auto,dist}: this-cli
     lint: cpplint
     lint: beautysh
