fix: dev: fix "choke" action in github workflow
if ctest is allowed to run before steps that run the tests
under valgrind, the redis server started up in pre-commands
will get shut down. Instead run tests via ctest using 'tests'
target. Now "choke" action in github should pass.

--- a/tox.ini
+++ b/tox.ini
@@ -60,7 +60,7 @@ commands =
     tests: bash -c 'cmake -DWITH_COVERAGE=1 -DCMAKE_BUILD_TYPE=Debug ..'
     grind: bash -c 'cmake -DRIPC_BUILD_TESTING=ON -DCMAKE_BUILD_TYPE=Debug ..'
     {tests,clang,grind}: bash -c 'cmake --build . -j $(nproc)'
-    {tests,grind}: bash -c 'ctest -V --test-dir ./'
+    tests: bash -c 'ctest -V --test-dir ./'
     clang: bash -c 'cmake --build . --target coverage'
     lcov: lcov_cobertura build/coverage/lcov.info --base-dir {toxinidir} --output coverage.xml
     lint: bash -c 'cpplint --output=gsed {toxinidir}/src/* {toxinidir}/inc/*'
